# All Rights Reserved.  Use is subject to license terms.
# 
# See the file "license.terms" for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL 
# WARRANTIES.
#

Change history for FreeTTS.
--------------------------

XXXX,XX, 2005 Release 1.2XXX
    - Added support to build w/o requiring JSAPI
    - Only build tests on demand (more freedom from JUnit)
    - Added ability for emacspeak demo to strip DECTalk commands from text
    - Added speaking rate change support to emacspeak demo
    - Allowed emacspeak text to omit '{' and '}' if text has no spaces
    - Changed state name expansion logic (bug 1101229)
    - Added pronunciations for British Sterling and "not" sign
    - Modified missing speech.properties message (rfe 1041437 and bug 1041296)
    - Added pronunciations for Linux terms (bug 1006630)
    - Added JUnit to prerequisites list (bug 975557)
    - Fixed -dump{Multi}Audio problem in freetts app (bug 986503).
    - Added importing tools specifically for CMU ARCTIC Voices.
    - Fixed problem in mbrola phonem remapping.
    - In the Voice class, removed the call to AudioPlayer.drain() 
      if the audio is cancelled, since it will block until the next audio
      is available.
    - Fixed problem in FreeTTSSynthesizer where in some cases waiting 
      threads are not notified when a queue item is cancelled.
    - Made the JavaStreamingAudioPlayer.cancel() method unsynchronized
      so that audio output can be stopped immediately.
    - Added rudimentary internationalization to Festvox import.
      This imports international (non-US-English) cluster unit voices,
      but obviously still lacks a lexicon and other NLP components for
      new languages.

June 15, 2004 Release 1.2beta2
    - Added experimental CMUArcticVoice that may (or may not) work
      with the CMU ARCTIC databases.
    - Added CMUTimeVoice, which has noop post lexical processing
      to support the FestVox limited domain time voice scheme.