@@ -2,7 +2,7 @@
 <!--
 
 /**
- * Copyright (c) 2001, 2002  Sun Microsystems, Inc.
+ * Copyright (c) 2001, 2002, 2005  Sun Microsystems, Inc.
  * 
  * See the file "license.terms" for information on usage and
  * redistribution of this file, and for a DISCLAIMER OF ALL 
@@ -14,7 +14,7 @@
 
 <head>
 <meta name="generator" content="HTML Tidy, see www.w3.org">
-<title>FreeTTS 1.1.1 for Emacspeak</title>
+<title>FreeTTS</title>
 </head>
 
 <body bgcolor="white">
@@ -23,38 +23,41 @@
   <table bgcolor="#bbbae2" border="0" width="100%">
       <tr>
 	<td align=center width="100%">
-	<h2><i>FreeTTS 1.1.1 for Emacspeak</i> 
+	<h2><i>FreeTTS</i> 
 	</td>
       </tr>
   </table>
 
 </center>
 <br>
-<h1> Welcome to FreeTTS for Emacspeak </h1>
-This is a stripped down version of FreeTTS for Emacspeak. It does not provide support for
-JSAPI or cluster unit voices. 
+<h1> Welcome to FreeTTS </h1>
+This is a stripped down version of FreeTTS that has all JSAPI
+dependencies removed.  When reading the 
+<a href="docs/index.html">full documentation</a>, 
+please keep this in mind.
+
+Furthermore, this is a <b>source only</b> release, which means you
+need to build FreeTTS before doing anything.  You can build FreeTTS
+by following the <a href="docs/index.html#how_build">build instructions.</a>
 
 <h2> How do I run the FreeTTS Emacspeak server? </h2>
-See these <a href="demo/freetts/Emacspeak/README.html"> instructions</a> on running Emacspeak.
+This version of FreeTTS is written primarily for releasing the
+non-JSAPI version of the emacspeak server.  
+
+See these <a href="demo/freetts/Emacspeak/README.html">instructions</a> 
+on building and running the non-JSAPI version of the Emacspeak server.
 
 <h2> What is FreeTTS? </h2>
-<p>FreeTTS is a speech synthesis system written entirely in the Java<sup><font size="-1">TM</font></sup> programming language. It is based upon <a href="http://www.cmuflite.org">Flite 1.1</a>: a small run-time speech synthesis engine developed at Carnegie Mellon University. Flite is derived from the <a href="http://www.cstr.ed.ac.uk/projects/festival/">Festival</a> Speech Synthesis System from 
+<p>FreeTTS is a speech synthesis system written entirely in the Java<sup><font size="-1">TM</font></sup> programming language. It is based upon <a href="http://www.cmuflite.org">Flite 1.2</a>: a small run-time speech synthesis engine developed at Carnegie Mellon University. Flite is derived from the <a href="http://www.cstr.ed.ac.uk/projects/festival/">Festival</a> Speech Synthesis System from 
 the University of Edinburgh and the <a href="http://festvox.org/">FestVox</a> project from Carnegie Mellon University.</p>
 
 <h2> Where can I get the full version of FreeTTS? </h2>
 For a full version of FreeTTS, please go to <a
 href="http://freetts.sourceforge.net"> freetts.sourceforge.net </a>
 
-<h2> How do I build FreeTTS for Emacspeak</h2>
-<p>To build FreeTTS for Emacspeak you will need the 
-Java <sup><font size="-1">TM</font></sup> 2 SDK, Standard Edition, v 1.4
-platform as well as GNU Make version 3.79 or higher. To build type "make" from the top
-level directory.
-
 <hr>
 See the <a href="license.terms">license terms</a> and <a href="acknowledgments.txt">acknowledgments</a>.<br>
-Copyright 2001, 2002 Sun Microsystems, Inc. All Rights Reserved. Use is subject to license terms.</li>
+Copyright 2001, 2002, 2005 Sun Microsystems, Inc. All Rights Reserved. Use is subject to license terms.</li>
 </ul>
 </body>
 </html>
-
